Adding aggregate schedule view
